--- a/style.css
+++ b/style.css
@@ -14,11 +14,6 @@
   --font-game: 'Press Start 2P', cursive;
 }
 
-body {
-  /* font-family: var(--font-main); */
-  /* background-color: #1a1a1a; */
-}
-
 
 header {
   display: flex;
@@ -39,6 +34,7 @@ header {
 input[type='text'] {
   padding: .5em 0 .5em .5em;
   border: none;
+  color: white;
 }
 
 #search {
@@ -65,18 +61,15 @@ input[type='text'] {
 
 main {
   width: 60%;
-  /* color: white; */
   margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 1rem;
   padding-top: 2em;
-  /* background-color: #ffeeee; */
 }
 
 .card {
   border-radius: 10px;
-  /* text-align: center; */
   background-color: #fff;
   padding: 1em;
   background-color: black;
@@ -112,11 +105,11 @@ main {
 .card-actual-img:hover {
   scale: 1.15;
 }
-@media screen and (min-width: 30em) {
+@media screen and (min-width: 35em) {
   header {
     flex-direction: row;
   }
   main {
-    width: 80%;
+    width: 70%;
   }
 }
